--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    Welcome! Bla Bla BLa! Hello I am Nikita!!!  !№!"№!"№ЦУВЙЦУЙ"УЦЙЦУЙЦУЙЦУЙЦУЙЦУЙЦУЙЦУУ
+    Welcome! Bla Bla BLa! Hello I am Nikita!!!  Malachin Sucks!!!
 </body>
 </html>
