--- a/catalog.html
+++ b/catalog.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    Catalog
+    
+    <h1>Catalog</h1>
+
+    <br>
+    <!-- Собственно сам каталог -->
+    <div class="card">
+        <!-- Картинка товара -->
+        <img src="" width="100" height="100">
+        <!-- Имя товара -->
+        <h4>Item name</h4>
+    </div>
+
 </body>
 </html>
