--- a/catalog.html
+++ b/catalog.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-    <h1>Catalog</h1>
+    <title>Каталог</title>
+    <!-- Стили -->
+    <link rel="stylesheet" href="styles/catalog.css">
+    <!-- bootstrap -->
+    <!-- <link rel=”stylesheet” href=”https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm” crossorigin=”anonymous”> -->
 
-    <br>
+</head>
+
+<body>
+    <menu>
+        <a href="index.html">Main</a>
+        <a href="catalog.html">Catalog</a>
+    </menu>
+
+    <hr class="rounded">
+
     <!-- Собственно сам каталог -->
     <div class="card">
         <!-- Картинка товара -->
@@ -20,4 +30,5 @@
     </div>
 
 </body>
+
 </html>
