--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main page</title>
+
+    <!-- Стили -->
+    <link rel="stylesheet" href="styles/catalog.css">
+    <!-- bootstrap -->
+    <!-- <link rel=”stylesheet” href=”https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm” crossorigin=”anonymous”> -->
+
+
 </head>
+
 <body>
-    Welcome!
+    <menu>
+        <a href="index.html">Main</a>
+        <a href="catalog.html">Catalog</a>
+    </menu>
+
+    <hr class="rounded">
+
 </body>
+
 </html>
