--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Main page</title>
 
     <!-- Стили -->
-    <link rel="stylesheet" href="styles/catalog.css">
+    <link rel="stylesheet" href="styles/style.css">
     <!-- bootstrap -->
     <!-- <link rel=”stylesheet” href=”https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm” crossorigin=”anonymous”> -->
 
@@ -16,12 +16,12 @@
 </head>
 
 <body>
-    <menu>
+    <menu class="menu">
         <a href="index.html">Main</a>
         <a href="catalog.html">Catalog</a>
+        <a href="registration.html">Registration</a>
+        <hr class="rounded">
     </menu>
-
-    <hr class="rounded">
 
 </body>
 
