--- a/catalog.html
+++ b/catalog.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
     <!-- Стили -->
-    <link rel="stylesheet" href="styles/catalog.css">
+    <link rel="stylesheet" href="styles/style.css">
     <!-- bootstrap -->
     <!-- <link rel=”stylesheet” href=”https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css”rel=”nofollow” integrity=”sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm” crossorigin=”anonymous”> -->
 
 </head>
 
 <body>
-    <menu>
+    <menu class="menu">
         <a href="index.html">Main</a>
         <a href="catalog.html">Catalog</a>
+        <a href="registration.html">Registration</a>
+        <hr class="rounded">
     </menu>
-
-    <hr class="rounded">
 
     <!-- Собственно сам каталог -->
     <div class="card">
