--- a/catalog.html
+++ b/catalog.html
@@ -29,6 +29,17 @@
         <h4>Item name</h4>
     </div>
 
+    <!-- Реализация каталога на JS -->
+    <script>
+        
+        var array = [];
+
+array.push('<tr>');
+array.push('<input type="text">');
+array.push('</tr>');
+
+    </script>
+
 </body>
 
 </html>
